--- a/projetos/interactive-rating-component-main/style.css
+++ b/projetos/interactive-rating-component-main/style.css
@@ -113,6 +113,7 @@ button {
   font-size: var(--fs15);
   color: var(--color-neutral-white);
   font-weight: var(--fw700);
+  letter-spacing: 0.1em;
 }
 
 .hoverlb > label {
@@ -204,9 +205,14 @@ p {
 
 .ball {
   border-radius: 50%;
-  width: 35px;
-  height: 35px;
-  background-color: var(--color-neutral-mediumgrey);
+  width: 30px;
+  height: 30px;
+  background-color: #353f49b0;
+}
+
+div > svg {
+  display: flex;
+  align-content: center;
 }
 
 .round-border {
@@ -231,16 +237,18 @@ p {
 }
 
 label > p {
+  line-height: 1.3;
+  font-weight: bold;
   text-align: center;
   font-size: var(--fs15);
   justify-content: center;
 }
 
 .rate > label {
-    color: black;
+    color: hsla(0, 0%, 100%, 0.5);
     padding: 20px;
     border-radius: 50%;
     width: 15px;
     height: 15px;
-    background-color: var(--color-neutral-lightgrey);
+    background-color: #353f49b0;
 }
