--- a/projetos/interactive-rating-component-main/style.css
+++ b/projetos/interactive-rating-component-main/style.css
@@ -8,6 +8,7 @@
   --color-neutral-mediumgrey: hsl(216, 12%, 54%);
   --color-neutral-darkblue: hsl(213, 19%, 18%);
   --color-neutral-verydarkblue: hsl(216, 12%, 8%);
+  --color-daora: hsla(210, 16%, 25%, 0.69);
 
   --fs15: 15px;
   --fw400: 400;
@@ -109,15 +110,14 @@ h3 {
   line-height: 1.1;
 }
 
-button {
+.button {
   font-size: var(--fs15);
   color: var(--color-neutral-white);
   font-weight: var(--fw700);
   letter-spacing: 0.1em;
 }
 
-
-button:hover {
+#submit > button:hover {
   background-color: var(--color-neutral-white);
   color: var(--color-primary-orange);
   cursor: pointer;
@@ -130,18 +130,30 @@ p {
 
 /* composition */
 
+.marginct {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .marginbt-25 {
   margin-bottom: 25px;
 }
 
-.margintp-20 {
-  margin-top: 20px;
+.marginbt-20 {
+  margin-bottom: 20px;
 }
 
 .marginbt-15 {
   margin-bottom: 15px;
 }
 
+.margintp-20 {
+  margin-top: 20px;
+}
+
+.margintp-5 {
+  margin-top: 5px;
+}
 
 .justify {
    display: flex;
@@ -192,10 +204,17 @@ p {
 }
 
 .cordaora {
-  background-color: #353f49b0;
+  background-color: var(--color-daora);
 }
 
 /* boxes */
+
+
+.gridbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .flexbox {
     display: flex;
@@ -211,8 +230,9 @@ p {
 
 .ball {
   border-radius: 50%;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
+  background-color: var(--color-daora);
 }
 
 .round-border {
@@ -222,6 +242,25 @@ p {
   margin: 4px 2px;
   border-radius: 20px;
 }
+
+#balls > button {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  background-color: var(--color-daora);
+  border: none;
+  color: rgba(255, 255, 255, 0.637);
+  font-weight: var(--fw700);
+  font-size: 13px;
+  gap: 1em;
+}
+
+#balls > button:hover {
+  background-color: var(--color-neutral-lightgrey);
+  transition-duration: 0.5s;
+}
+
+
 
 .round-border2 {
   border: none;
@@ -233,49 +272,4 @@ p {
 
 .background-panel {
   background-color: var(--color-neutral-darkblue);
-}
-
-.rate {
-    padding: 0 10px;  
-}
-
-.hoverlb > label {
-  background-color: var(--color-neutral-white);
-  color: var(--color-neutral-mediumgrey);
-  cursor: pointer;
-}
-
-
-span > p {
-  text-align: center;
-  margin: auto;
-}
-
-
-
-.rate:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
-}
-
-label > p {
-  line-height: 1.3;
-  font-weight: bold;
-  text-align: center;
-  font-size: var(--fs15);
-  justify-content: center;
-}
-
-.ratingbg:hover {
-  background-color: var(--color-neutral-lightgrey);
-  cursor: pointer;
-}
-
-.rate > label {
-    color: hsla(0, 0%, 100%, 0.5);
-    padding: 20px;
-    border-radius: 50%;
-    width: 15px;
-    height: 15px;
-
 }
